apps/workloads/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-ui
spec:
  selector:
    app: radarr
  ports:
    - name: web-ui
      port: 7878
