apps/workloads/media/radarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-ui-route
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "radarr.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr-ui
          port: 7878
      filters:
        - type: ExtensionRef
          extensionRef:
            group: "traefik.io"
            kind: "Middleware"
            name: "authelia-forward-auth"
        - type: ExtensionRef
          extensionRef:
            group: "traefik.io"
            kind: "Middleware"
            name: "compress"
