apps/workloads/media/radarr/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr-policy
spec:
  endpointSelector:
    matchLabels:
      app: radarr
  # ----=== Ingress ===----
  ingress:
    # === Allow access from other apps ===
    - fromEndpoints:
        - matchLabels:
            app: prowlarr
        - matchLabels:
            app: seerr
        - matchLabels:
            app: autobrr
        - matchLabels:
            app: bazarr
        - matchLabels:
            app: unpackerr
        - matchLabels:
            app: kometa
        - matchLabels:
            app: recyclarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: automation
            app.kubernetes.io/name: n8n
      toPorts:
        - ports:
            - port: "web-ui"
              protocol: "TCP"

  # ----=== Egress ===----
  egress:
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: qbittorrent-ui
            namespace: media
        - k8sService:
            serviceName: plex-ui
            namespace: media
        - k8sService:
            serviceName: prowlarr-ui
            namespace: media
        - k8sService:
            serviceName: posterizarr
            namespace: media
        - k8sService:
            serviceName: ntfy
            namespace: automation
        - k8sService:
            serviceName: n8n-main
            namespace: automation
        - k8sService:
            serviceName: n8n-webhook-processor
            namespace: automation
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: automation
            app.kubernetes.io/name: ntfy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # === Allow access to n8n ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: automation
            app.kubernetes.io/name: n8n
      toPorts:
        - ports:
            - port: "5678"
              protocol: TCP
    # === Allow access to Postgres on Fortress ===
    - toCIDR:
        - "10.10.1.218/32"
      toPorts:
        - ports:
            - port: "15432"
              protocol: TCP
    # === Allow access to external for indexers ===
    - toEntities:
        - "world"
      toPorts:
        # Only allow HTTP/S for indexers
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "80"
              protocol: TCP
